# Stock-Market_Agent

./: README.md  pyproject.toml  report.md
src/finance/: crew.py  main.py
src/finance/config/: agents.yaml  tasks.yaml
