[project]
name = "finance"
version = "0.1.0"
description = "finance using crewAI"
authors = [{ name = "Abishek", email = "abishekbalamurugan858@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0",
    "fastapi>=0.128.0",
    "langchain-groq>=1.1.1",
    "litellm>=1.75.3",
    "uvicorn>=0.40.0",
]

[project.scripts]
finance = "finance.main:run"
run_crew = "finance.main:run"
train = "finance.main:train"
replay = "finance.main:replay"
test = "finance.main:test"
run_with_trigger = "finance.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
